--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -129,34 +129,40 @@ header {
 }
 
 @media (max-width: 850px) {
-    .nav_actions .nav_btn {
-        display: none;
-      }
-    
-      .navbar {
-        height: 24rem;
-        border: 1px solid rgba(255, 255, 255, 0.28);
-      }
-    
-      .btn_container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-      }
-    
-      .btn_container .nav_btn2 {
-        transition: filter 0.3s ease;
-        display: block;
-        color: #fff;
-        font-weight: 500;
-        width: 85%;
-        text-align: center;
-        margin-bottom: 1.4rem;
-        background: linear-gradient(to right, #3a5e72, #5c93b1);
-        border: none;
-        padding: 0.8rem;
-        border-radius: 0.8rem;
-      }
+  header {
+    background-image: url(../../assets/background.svg);
+    backdrop-filter: blur(10px);
+    background-color: #1b282e;
+  }
+
+  .nav_actions .nav_btn {
+    display: none;
+  }
+
+  .navbar {
+    height: 24rem;
+    border: 1px solid rgba(255, 255, 255, 0.28);
+  }
+
+  .btn_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .btn_container .nav_btn2 {
+    transition: filter 0.3s ease;
+    display: block;
+    color: #fff;
+    font-weight: 500;
+    width: 85%;
+    text-align: center;
+    margin-bottom: 1.4rem;
+    background: linear-gradient(to right, #3a5e72, #5c93b1);
+    border: none;
+    padding: 0.8rem;
+    border-radius: 0.8rem;
+  }
 }
