--- a/src/css/search-filter.css
+++ b/src/css/search-filter.css
@@ -14,6 +14,7 @@
 }
 
 .search_bar input {
+  color: #fff;
   width: 100%;
   height: 100%;
   padding: 1rem 3rem;
@@ -28,20 +29,37 @@
   font-weight: 200;
 }
 
+.filters {
+  display: flex;
+  flex-direction: row;
+  gap: 3rem;
+  transition: all 0.5s ease;
+}
+
 .filter_bar {
+  transition: all 0.5s ease;
   flex: 2;
   display: flex;
   align-items: center;
+  padding: 1rem 1.5rem;
+  gap: 2rem;
   justify-content: space-between;
   background: #24343d;
-  padding: 1.5rem 3rem;
   border-radius: 1.2rem;
-  gap: 3.8rem;
   max-width: 90rem;
 }
 
 .filter_text {
   font-size: 2.7rem;
+}
+
+#filters-icon {
+  display: none;
+}
+
+#filters-icon:hover {
+  color: #d3d3d3;
+  transform: translateY(0.1rem);
 }
 
 .filter_bar select {
@@ -66,13 +84,35 @@
 }
 
 @media (max-width: 850px) {
+  .filters {
+    align-items: center;
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    gap: 1rem;
+  }
+
+  #filters-icon {
+    display: flex;
+    font-size: 2.8rem;
+  }
+
+  .filter-text-container {
+    padding: 1rem;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    gap: 0.8rem;
+  }
+
   .search_filter {
     flex-direction: column;
   }
   .filter_bar {
+    justify-content: space-between;
     flex-direction: column;
     width: 100%;
-    padding: 1rem 1rem;
     gap: 1.2rem;
   }
   .filter_bar select {
@@ -84,5 +124,9 @@
   }
   .filter_text {
     font-size: 2rem;
+  }
+
+  #conditionFilter {
+    margin-bottom: 0.8rem;
   }
 }
