--- a/src/css/weather-cards.css
+++ b/src/css/weather-cards.css
@@ -31,6 +31,11 @@
 .weather-icon img {
   width: auto;
   height: 10.2rem;
+  transition: transform 0.5s ease;
+}
+
+.weather-icon img:hover {
+  transform: scale(1.1) rotate(5deg);
 }
 
 .weather-info {
