style: navbar scroll animation

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -9,7 +9,15 @@ header {
   justify-content: space-between;
   background: transparent;
   padding: 5.1rem 12%;
+  opacity: 1;
+  visibility: visible;
   transition: all 0.5s ease;
+}
+
+.sticky {
+  opacity: 0;
+  visibility: hidden;
+  overflow: hidden;
 }
 
 .nav_logo {
@@ -17,6 +25,7 @@ header {
   align-items: center;
   color: #fff;
   font-size: 4rem;
+  transition: all 0.5s ease;
 }
 
 .nav_logo #nav-icon {
