--- a/src/css/base.css
+++ b/src/css/base.css
@@ -16,12 +16,32 @@ body {
   height: 100%vh;
   background: #1b282e url(../../assets/background.svg) no-repeat center/cover;
   color: #fff;
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
 }
 
 main {
   padding: 0 8%;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  bottom: 0;
+  margin: 2rem;
+}
+
+footer p {
+  font-size: 1.6rem;
+  transition: all 0.5s ease;
+}
+
+footer p:hover {
+  transform: translateY(-0.5rem);
 }
 
 .loading-spinner {
@@ -62,7 +82,7 @@ main {
 
 @media (max-width: 1322px) {
   body {
-    min-height: 100vh;
+    height: 100vh;
     background: #1b282e url(../../assets/background2.png) no-repeat center/cover;
   }
 }
