--- a/src/css/base.css
+++ b/src/css/base.css
@@ -46,6 +46,15 @@ footer p:hover {
   transform: translateY(-0.5rem);
 }
 
+footer p a {
+  color: #fff;
+  text-decoration: none;
+}
+
+footer p a:hover {
+  color: #cccccc;
+}
+
 .loading-spinner {
   border: 5px solid #f3f3f3;
   border-top: 5px solid #3498db;
